--- a/jquery-theme/src/WEB-INF/liferay-plugin-package.properties
+++ b/jquery-theme/src/WEB-INF/liferay-plugin-package.properties
@@ -1,6 +1,6 @@
 name=JQuery Theme
 module-group-id=liferay
-module-incremental-version=1
+module-incremental-version=1.0
 tags=
 short-description=
 long-description=
